# Plant-disease-detection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-api-cpu.txt  requirements-api.txt  requirements-common.txt  requirements-cpu.txt  requirements-dev.txt  requirements-gpu.txt  requirements-streamlit.txt  requirements-training.txt
.github/workflows/: ci_cd.yml  pages.yml
app/: api_client.py  disease_info.py  streamlit_app.py
data/samples/demo/: README.md
docs/: architecture.md  deployment.md  getting_started.md  index.md  report.md  results.md
docs/api/: index.md
docs/mlops/: index.md
docs/report/: cas_pratique.md  mise_en_situation.md
notebooks/: 01_data_exploration.ipynb  02_preprocessing.ipynb  03_benchmark_species.ipynb  04_benchmark_diseases.ipynb  05_ensemble_selection.ipynb  06_gradcam.ipynb
scripts/: log_final_selection_to_mlflow.py  push_models_to_hub.py
src/api/: main.py  model_loader.py  preprocessing.py  schemas.py
src/api/routers/: feedback.py  health.py  models.py  monitoring.py  predict.py
src/core/: __init__.py  logger.py  mlflow_config.py
src/data/: __init__.py  align_labels.py  augmentation.py  download.py  files.py  organize.py  split.py
src/models/: __init__.py  build.py  evaluate.py  gradcam.py  train.py
src/monitoring/: __init__.py  image_quality.py  monitoring_reference.json  tracker.py
tests/: conftest.py
tests/integration/: test_api_errors.py  test_api_health.py  test_api_predict.py
tests/model/: test_model_performance.py
tests/unit/: test_align_labels.py  test_augmentation.py  test_build_model.py  test_image_quality.py  test_mlflow_config.py  test_model_loader.py  test_monitoring_tracker.py  test_organize.py  test_preprocessing.py  test_split.py  test_train.py
