[tool.poetry]
name = "plant-disease-detection"
version = "0.1.0"
description = "Diagnostic de maladies foliaires par image."
authors = ["Thomas Hebert <thomas.hebert99@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.7.0"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.0"
streamlit = "^1.35.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.0"
pre-commit = "^3.7.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocstrings = { version = "^0.25.0", extras = ["python"] }
mkdocs-gen-files = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle — erreurs de style
    "F",    # pyflakes — erreurs logiques (imports inutilisés, variables non définies...)
    "I",    # isort — ordre des imports
    "N",    # pep8-naming — conventions de nommage
    "UP",   # pyupgrade — modernisation du code Python
    "B",    # flake8-bugbear — bugs courants et mauvaises pratiques
    "SIM",  # flake8-simplify — simplifications possibles
]
ignore = [
    "E501",  # line too long — géré par le formateur
]

[tool.ruff.lint.isort]
known-first-party = ["src"]   # les imports de "src" sont traités comme first-party

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
